[package]
name = "telegram-send"
version = "0.0.1"
authors = ["luxagen <hello@luxagen.com>"]
homepage = "http://www.luxagen.com/product/telegram-send"
license = "AGPL-3.0-only"
edition = "2021"

[[bin]]
name = "tg-send"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
clap = { version = "4.3.11", features = ["cargo", "derive"] }
colored = "2.0.0"
lazy_static = "1.4.0"
telegram-bot = "0.7"
tokio = { version = "0.2.25", features = ["rt-core", "macros"] }
futures = "0.3.28"
